better css with flex . also improved chat functionality and handled some security cases

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,15 @@
   margin-bottom: -100px;
 }
 
+.my_card{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+}
+
+.clickable{
+  cursor: pointer;
+}
 
 
 .App-link {
