--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-color: #464646;
+}
+
+.other_user_message{
+  display: flex;
+  justify-content: flex-end;
 }
 
 *,
