--- a/client/src/flex.css
+++ b/client/src/flex.css
@@ -8,8 +8,13 @@
     width: 100%;
 }
 
-.form-field{
-flex-basis: 50%;
+.flex-container-posts-image{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 * {
